[package]
name = "arkham"
version = "0.3.0"
edition = "2021"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "component_functions"
path = "examples/component_functions.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "component_params"
path = "examples/component_params.rs"

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"

[[example]]
name = "navigation"
path = "examples/navigation.rs"

[[example]]
name = "stack"
path = "examples/stack.rs"

[[example]]
name = "paragraph"
path = "examples/paragraph.rs"

[dependencies]
anyhow = "1.0.71"
crossterm = "0.27"
ctrlc = "3.3.1"
textwrap = "0.16.0"
