[package]
name = "arkham"
version = "0.2.1"
edition = "2021"
description = "TUI made simple"
authors = ["Joe Bellus"]
license = "MIT"
exclude = [
    "docs/*"
]
homepage = "https://5sigma.github.io/arkham"
repository = "https://github.com/5Sigma/arkham"
readme = "readme.md"
keywords = ["terminal", "tui", "cli", "console"]
categories = ["command-line-interface", "command-line-utilities"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "component_functions"
path = "examples/component_functions.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "component_params"
path = "examples/component_params.rs"

[[example]]
name = "keyboard"
path = "examples/keyboard.rs"

[[example]]
name = "navigation"
path = "examples/navigation.rs"

[[example]]
name = "stack"
path = "examples/stack.rs"

[[example]]
name = "external"
path = "examples/threading.rs"
required-features = ["sync"]


[dependencies]
anyhow = "1.0.71"
crossterm = "0.27"
ctrlc = "3.3.1"

[features]
sync = []
default = []
